commit for updating banner